--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,2 @@
-/Discount.png
-/Graph.png
-/Group.png
-/Home.png
-/Logout.png
-/Message.png
-/Notification.png
-/Setting.png
-/bx_bxs-store-alt.png
+/DAO/
 /DTO/
