--- a/.classpath
+++ b/.classpath
@@ -7,12 +7,17 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="jcalendar-1.4.jar">
+	<classpathentry kind="lib" path="MyLib/mysql-connector-j-8.3.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="MyLib/mysql-connector-j-8.3.0.jar">
+	<classpathentry kind="lib" path="MyLib/jcalendar-1.4.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="MyLib/protobuf-java-3.11.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
