--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,7 @@
-<<<<<<< HEAD
-/DTO/
 /GUI/
-/BUS/
 /Custom/
 /DAO/
+/DTO/
+/Main/
 /lam/
-=======
-/SanPham/
-/GUI/
->>>>>>> 8bf79fabfc88295603b1bef25f0b6ccb4f465ec6
+/BUS/
